[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/MatchManager.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Sprites/black.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Ball.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scripts/MatchParameters.gd" type="Script" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0.831373, 1, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0, 0, 0, 0 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="PhysicsMaterial" id=2]
bounce = 0.6

[node name="MatchManager" type="Node2D"]
script = ExtResource( 1 )

[node name="Player1" parent="." instance=ExtResource( 2 )]
position = Vector2( 0, -1 )
playerID = "1"

[node name="Player2" parent="." instance=ExtResource( 2 )]
playerID = "2"

[node name="HudManager" type="Node2D" parent="."]

[node name="ScorePanel" type="Sprite" parent="HudManager"]
position = Vector2( 0, -260 )
texture = ExtResource( 3 )

[node name="TimeLabel" type="Label" parent="HudManager/ScorePanel"]
anchor_right = 0.5
anchor_bottom = 0.3
margin_left = -20.0
margin_top = -20.0
margin_right = -50.0
margin_bottom = -2.0
rect_scale = Vector2( 1.33, 1.33 )
text = "10"
align = 1
valign = 1

[node name="Player1ScoreLabel" type="Label" parent="HudManager/ScorePanel"]
anchor_right = 0.5
anchor_bottom = 0.3
margin_left = -60.0
margin_top = -20.0
margin_right = -80.0
margin_bottom = 8.0
text = "0"
align = 1
valign = 1

[node name="Player2ScoreLabel" type="Label" parent="HudManager/ScorePanel"]
anchor_right = 0.5
anchor_bottom = 0.3
margin_left = 20.0
margin_top = -20.0
margin_bottom = 8.0
text = "0"
align = 1
valign = 1

[node name="TurnTimeBar" type="ProgressBar" parent="HudManager/ScorePanel"]
margin_left = -60.0
margin_top = 21.0
margin_right = 60.0
margin_bottom = 35.0
custom_styles/fg = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
max_value = 10.0
step = 0.05
value = 5.0
percent_visible = false

[node name="Ball" parent="." instance=ExtResource( 4 )]
physics_material_override = SubResource( 2 )

[node name="TurnTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="MatchTimer" type="Timer" parent="."]
wait_time = 60.0
one_shot = true

[node name="MatchParameters" type="Node" parent="."]
script = ExtResource( 5 )
matchTime = 120

[node name="MatchWinnerPanel" type="Control" parent="."]
visible = false
margin_left = -640.0
margin_top = -360.0
margin_right = 640.0
margin_bottom = 360.0
rect_pivot_offset = Vector2( 0.5, 0.5 )

[node name="Label" type="Label" parent="MatchWinnerPanel"]
margin_left = 563.0
margin_top = 145.0
margin_right = 723.0
margin_bottom = 209.0
text = "WE HAVE A WINNER!!!"
uppercase = true

[connection signal="timeout" from="MatchTimer" to="." method="_on_MatchTimer_timeout"]
